--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "angular-formly": "^8.4.1",
+    "ngx-spinner": "^15.0.1",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.2.0",
